--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -450,6 +450,7 @@
                         </Grid>
                     </TabItem>
                     <TabItem Header="Videos" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" Margin="-2,0" >
+                        
                         <Grid Background="Black" Margin="0,0,0,0.5">
                             <ListBox Grid.Column="0" x:Name="videoListView" ItemsSource="{Binding VideosList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding SelectedVideo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Background="Black" Foreground="#FFDFE1E5" BorderBrush="{x:Null}" BorderThickness="0"  UseLayoutRounding="False" Padding="-2" ItemContainerStyle="{DynamicResource PlayListListBoxItem}" >
 
@@ -468,6 +469,7 @@
                     </TabItem>
                     <TabItem Header="Music playing" BorderBrush="{x:Null}" Margin="-2.5,3,-2,-1" >
                         <Grid Background="Black" Margin="0,0,0,0.5">
+                            <ContentControl Content="{Binding MyMediaElement}" Foreground="Red" Background="Black" Panel.ZIndex="90"/>
                             <TextBlock x:Name="artist" Margin="0,0,10,9.5" TextWrapping="Wrap" TextAlignment="Right" FontSize="16" Foreground="#FFDFE1E5" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="524"><Run Language="fr-fr" Text="{Binding NowPlayingArtist, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/></TextBlock>
                             <TextBlock x:Name="title" Margin="0,0,10,29.5" TextWrapping="Wrap" TextAlignment="Right" FontSize="18.667" FontWeight="SemiBold" Foreground="#FFC19BEB" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="524"><Run Language="fr-fr" Text="{Binding NowPlayingTitle, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/></TextBlock>
 
